--- a/src/style/mutiny.scss
+++ b/src/style/mutiny.scss
@@ -1,10 +1,66 @@
 .rm {
+  --text-color: initial;
+
   font-family: sans-serif;
   font-size: 16px;
 
-  &, * {
+  &, *, input, select {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+  }
+
+  &--dark {
+    --text-color: #cfcfd1;
+    &, *, input, select {
+      color: var(--text-color);
+    }
+  }
+
+  &-tag {
+    display: inline-block;
+    font-size: .75em;
+    font-weight: 500;
+    border-radius: .2em;
+    padding: .5em 1em;
+    cursor: pointer;
+
+    &:not(:last-child) {
+      margin-right: .4em;
+    }
+
+    * {
+      pointer-events: none;
+    }
+  }
+  
+  &-top {
+    display: flex;
+    justify-content: flex-start;
+    border-bottom: 1px solid var(--text-color);
+    padding-bottom: .25em;
+
+    &-items {
+      display: flex;
+      align-items: center;
+    }
+
+    &-form {
+      flex-grow: 1;
+    }
+  }
+
+  &-form {
+    height: 2em;
+
+    input {
+      padding-left: .875em;
+      padding-right: .875em;
+      width: 100%;
+      height: 100%;
+      outline: none;
+      border: 0;
+      background-color: transparent;
+    }
   }
 }
