--- a/src/style/mutiny.scss
+++ b/src/style/mutiny.scss
@@ -1,5 +1,6 @@
 .rm {
   --text-color: initial;
+  --list-bg: initial;
 
   font-family: sans-serif;
   font-size: 16px;
@@ -12,6 +13,7 @@
 
   &--dark {
     --text-color: #cfcfd1;
+    --list-bg: #222226;
     &, *, input, select {
       color: var(--text-color);
     }
@@ -24,6 +26,7 @@
     border-radius: .2em;
     padding: .5em 1em;
     cursor: pointer;
+    color: #fff;
 
     &:not(:last-child) {
       margin-right: .4em;
@@ -47,6 +50,23 @@
 
     &-form {
       flex-grow: 1;
+    }
+  }
+
+  &-list {
+    padding: .4em;
+    background-color: var(--list-bg);
+
+    &-items {
+      display: inline-flex;
+      flex-direction: column;
+      align-items: flex-start;
+
+      .rm-tag {
+        &:not(:last-child) {
+          margin-bottom: .4em;
+        }
+      }
     }
   }
 
