--- a/src/style/mutiny.scss
+++ b/src/style/mutiny.scss
@@ -5,6 +5,14 @@
   font-family: sans-serif;
   font-size: 16px;
 
+  button {
+    outline: none;
+    border: 0;
+    box-shadow: unset;
+    cursor: pointer;
+    border-radius: .2em;
+  }
+
   &, *, input, select {
     margin: 0;
     padding: 0;
@@ -38,11 +46,22 @@
       pointer-events: none;
     }
   }
+
+  &-btn {
+    &-details {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      padding: .2em .4em;
+      background-color: #17171a;
+      font-size: .75em;
+    }
+  }
   
   &-top {
     display: flex;
     justify-content: flex-start;
-    border-bottom: 1px solid var(--text-color);
+    border-bottom: 1px solid #17171a;
     padding-bottom: .25em;
 
     &-items {
@@ -56,19 +75,33 @@
   }
 
   &-list {
-    padding: .4em;
     background-color: var(--list-bg);
+    border-radius: 0 0 .25em .25em;
+    overflow: hidden;
 
     &-items {
-      display: inline-flex;
-      flex-direction: column;
+      display: flex;
+      flex-wrap: wrap;
       align-items: flex-start;
+      padding-top: .4em;
+      padding-bottom: .4em;
 
-      .rm-tag {
-        &:not(:last-child) {
-          margin-bottom: .4em;
+      & > div {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        padding: .4em;
+
+        .rm-btn-details {
+          height: 100%;
+        }
+
+        &:hover {
+          background-color: #141415;
         }
       }
+
     }
   }
 
