--- a/src/style/mutiny.scss
+++ b/src/style/mutiny.scss
@@ -75,9 +75,15 @@
   }
 
   &-list {
+    height: auto;
+    max-height: 0;
     background-color: var(--list-bg);
     border-radius: 0 0 .25em .25em;
     overflow: hidden;
+    animation-name: rm-list-fade;
+    animation-duration: .48s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in-out;
 
     &-items {
       display: flex;
@@ -99,6 +105,10 @@
 
         &:hover {
           background-color: #141415;
+
+          .rm-btn-details {
+            background-color: var(--list-bg);
+          }
         }
       }
 
@@ -116,6 +126,11 @@
       outline: none;
       border: 0;
       background-color: transparent;
+
+      &::placeholder {
+        font-size: .875em;
+        opacity: .32;
+      }
     }
   }
 }
