--- a/src/style/mutiny.scss
+++ b/src/style/mutiny.scss
@@ -124,7 +124,16 @@
       }
     }
   }
-  
+
+  .rm-label {
+    font-size: .75em;
+    margin-left: auto;
+    margin-right: .5em;
+    border: 1px solid black;
+    padding: .1em .4em;
+    border-radius: .2em;
+  }
+
   &-top {
     display: flex;
     justify-content: flex-start;
