--- a/src/style/mutiny.scss
+++ b/src/style/mutiny.scss
@@ -163,7 +163,7 @@
     display: flex;
     justify-content: flex-start;
     border-bottom: 1px solid #17171a;
-    padding-bottom: .25em;
+    padding: .4em;
 
     &-items {
       display: flex;
