--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,3 @@
-body {
-  background-color: #2a2a2e;
-  color: #cfcfd1;
-}
-
-@import './animation.scss';
-@import './mutiny.scss';
+@import 'reset';
+@import 'colors';
+@import 'mutiny';
