--- a/src/style/mutiny.scss
+++ b/src/style/mutiny.scss
@@ -1,206 +1,81 @@
 .rm {
-  --text-color: initial;
-  --list-bg: initial;
-
+  $this: &;
+  background-color: var(--bg-color);
+  color: var(--text-color);
   font-family: sans-serif;
   font-size: 16px;
+  border-radius: .24em;
+  overflow: hidden;
 
-  button {
-    outline: none;
-    border: 0;
-    box-shadow: unset;
-    cursor: pointer;
+  .rm-tag {
+    font-size: .875em;
+    padding: .32em .64em;
     border-radius: .2em;
   }
 
-  &, *, input, select {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-  &--dark {
-    --text-color: #cfcfd1;
-    --list-bg: #222226;
-    background-color: #2a2a2e;
-    &, *, input, select {
-      color: var(--text-color);
-    }
-  }
-
-  &-tag {
-    display: inline-block;
-    font-size: .75em;
-    font-weight: 500;
-    border-radius: .2em;
-    padding: .5em 1em;
-    cursor: pointer;
-    color: #fff;
-    outline: none;
-    border: 0;
-
-    &:not(:last-child) {
-      margin-right: .4em;
-    }
-
-    * {
-      pointer-events: none;
-    }
-  }
-
-  &-btn {
+  .rm-btn {
     &-details {
       display: inline-flex;
       align-items: center;
-      justify-content: center;
-      padding: .2em .4em;
-      background-color: #17171a;
-      font-size: .75em;
-    }
-  }
+      padding-left: .5em;
 
-  &-menu {
-    background-color:#17171a;
-    padding: .4em;
-    font-size: .875em;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-
-    input[type="text"] {
-      background-color: #111113;
-      border: black;
-      color: white;
-      height: 2em;
-      padding-left: .4em;
-      padding-right: .4em;
-      border-radius: .2em;
-
-      &::placeholder {
-        color: #444;
-      }
-    }
-
-    &-colors {
-      position: relative;
-      width: auto;
-      height: 1.5em;
-      border-radius: .25em;
-      overflow: hidden;
-      margin-left: auto;
-      margin-right: 1em;
-
-      span {
-        display: inline-flex;
-        align-items: center;
-        position: relative;
-        padding: 0 .4em;
-        z-index: 2;
-        width: auto;
-        height: 100%;
-        pointer-events: none;
-        background-color: transparent;
+      &:before, &:after {
+        content: '';
       }
 
-      input {
-        position: absolute;
-        z-index: 1;
-        top: -10%;
-        left: -10%;
-        border: 0;
-        outline: none;
-        width: 120%;
-        height: 120%;
+      &:before, &:after, span {
+        display: inline-block;
+        width: .5em;
+        height: .5em;
         border-radius: 50%;
-        cursor: pointer;
-
-        &:not(:first-child) {
-          margin-left: .5em;
-        }
+        background-color: var(--details-btn-bg);
       }
-    }
 
-    &-cta {
-      height: 1.5em;
-
-      button {
-        display: inline-flex;
-        align-items: center;
-        width: 1.5em;
-        height: 1.5em;
-        padding-top: .2em;
-        background-color: transparent;
-
-        * {
-          pointer-events: none;
-        }
-
-        svg {
-          width: 1.5em;
-          height: 1.5em;
-          fill: #fff;
-        }
-
-        &[aria-label="close"] {
-          border-radius: 50%;
-          background-color: red;
-          margin-left: .5em;
-        }
+      &:before, span {
+        margin-right: .24em;
       }
     }
   }
 
   .rm-label {
     font-size: .75em;
-    margin-left: auto;
-    margin-right: .5em;
-    border: 1px solid black;
-    padding: .1em .4em;
     border-radius: .2em;
+    border: 1px solid black;
+    padding: .2em .4em;
   }
 
   &-top {
     display: flex;
     justify-content: flex-start;
-    border-bottom: 1px solid #17171a;
+    align-items: stretch;
     padding: .4em;
 
     &-items {
       display: flex;
       align-items: center;
+      justify-content: flex-start;
 
-      .rm-tag {
+      & > div {
         display: inline-flex;
-        align-items: center;
+        justify-content: flex-start;
+        align-items: stretch;
+        border-radius: .2em;
+
+        &:not(:last-of-type) {
+          margin-right: .4em;
+        }
 
         button {
-          pointer-events: auto;
-
-          &:first-child {
-            background-color: transparent;
-            margin-right: .75em;
-            color: #fff;
-          }
-
           &:last-child {
-            padding: .5em;
-            font-size: 1em;
-            line-height: 0.5;
+            padding-right: .64em;
+          }
+        }
+      }
 
-            &:before, &:after {
-              content: '';
-            }
-
-            &:before, span {
-              margin-right: .25em;
-            }
-
-            span, &:before, &:after {
-              width: .4em;
-              height: .4em;
-              border-radius: 50%;
-              background-color: #fff;
-            }
+      & + #{$this}-top-form {
+        form {
+          input {
+            padding-left: .75em;
           }
         }
       }
@@ -208,64 +83,119 @@
 
     &-form {
       flex-grow: 1;
+      min-height: 1.5em;
+
+      form {
+        height: 100%;
+
+        input {
+          width: 100%;
+          height: 100%;
+          color: var(--text-color);
+
+          &::placeholder {
+            color: var(--text-color);;
+          }
+        }
+      }
     }
   }
 
   &-list {
-    height: auto;
-    max-height: 0;
-    background-color: var(--list-bg);
-    overflow: hidden;
-    animation-name: rm-list-fade;
-    animation-duration: .48s;
-    animation-fill-mode: forwards;
-    animation-timing-function: ease-in-out;
-
     &-items {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: flex-start;
-      padding-top: .4em;
-      padding-bottom: .4em;
 
       & > div {
         display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
+        justify-content: flex-start;
+        align-items: stretch;
         padding: .4em;
 
-        .rm-btn-details {
-          height: 100%;
+        span, button:last-of-type {
+          margin-left: auto;
+        }
+
+        span + button:last-of-type {
+          margin-left: 0;
         }
 
         &:hover {
-          background-color: #141415;
-
-          .rm-btn-details {
-            background-color: var(--list-bg);
-          }
+          background-color: var(--bg-color-hover);
         }
       }
-
     }
   }
 
-  &-form {
-    height: 2em;
+  &-menu {
+    display: flex;
+    padding: .4em .4em .6em .4em;
 
-    input {
-      padding-left: .875em;
-      padding-right: .875em;
-      width: 100%;
-      height: 100%;
-      outline: none;
-      border: 0;
-      background-color: transparent;
+    & > input[type="text"] {
+      color: var(--text-color);
+      flex-grow: 1;
+      margin-right: 1em;
+      height: 2em;
 
       &::placeholder {
-        font-size: .875em;
-        opacity: .32;
+        color: var(--text-color);
+      }
+    }
+
+    &-colors {
+      position: relative;
+      margin-left: auto;
+      margin-right: 1em;
+      border-radius: .2em;
+      overflow: hidden;
+
+      input {
+        position: absolute;
+        z-index: 1;
+        top: -25%;
+        left: -25%;
+        width: 150%;
+        height: 150%;
+        cursor: pointer;
+      }
+
+      span {
+        height: 100%;
+        display: inline-flex;
+        align-items: center;
+        position: relative;
+        font-size: .75em;
+        padding-left: .5em;
+        padding-right: .5em;
+        z-index: 2;
+        color: var(--text-color);
+        pointer-events: none;
+      }
+    }
+
+    &-cta {
+      display: inline-flex;
+      align-items: center;
+
+      button {
+        svg {
+          width: 1.32em;
+          height: 1.32em;
+        }
+
+        &:not(:last-of-type) {
+          margin-right: .5em;
+        }
+      }
+
+      #trash {
+        svg {
+          fill: var(--error-color);
+        }
+      }
+
+      #close {
+        svg {
+          fill: var(--text-color);
+        }
       }
     }
   }
