update :: text color of input[type=color]

--- a/src/style/mutiny.scss
+++ b/src/style/mutiny.scss
@@ -188,7 +188,7 @@
         padding-left: 1.5em;
         padding-right: 1.5em;
         z-index: 2;
-        color: var(--text-color);
+        color: var(--button-text-color);
         pointer-events: none;
       }
     }
